2010-06-03  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/main.c(main): Use .scratchDir for path of temporary savedirectory.

2010-06-03  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac, src/versionp.h: Bumped version to 3.6.92

2010-06-03  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/Aaa.c, src/Aaa_bison.c: Include ac_config.h, otherwise compiling
	  failes in Mac OS X.

2010-06-02  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* m4/* lib/* imported mkdtemp from gnulib.
	  Note: I ran "sed -i 's/<config.h>/<ac_config.h>/g' lib/*" after the
	  import.
	  I imported from revision 
	  of gnulib.

2010-06-02  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/Ghostview.c, src/process.c, src/ps.c: Use safe-dir from variable
	  gv_safe_gs_workdir.
	  
	* src/main.c: Check if global safe-dir is accessible, if not, create
	  a temporary one.
	  
	* src/Ghostview.c, src/Scrollbar.c, src/callbacks.c, src/ps.c:
	  Call clean_safe_tempdir on each position gv can exit.

	* src/main_globals.h: Two new vaiables gv_safe_gs_workdir and
	  gv_safe_gs_tempdir (=1 iff gv_safe_gs_workdir is temporary).

	* src/actions.c(clean_safe_tempdir): Delete temporary safe-dir.

2010-06-02  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/Makefile.am: Create s"afe-gs-workdir".

2010-06-02  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac, src/FileSel.c, src/Scrollbar.c, src/actions.c,
	src/callbacks.c, src/file.c, src/main.c, src/misc.c, src/options_gv.c:
	  mkstemo and inttypes.h are always available after gnulib import

2010-06-02  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* m4/* lib/* updated gnulib and imported canonicalize-lgpl, inttypes
	  and mkstemp.
	  Note: I ran "sed -i 's/<config.h>/<ac_config.h>/g' lib/*" after the
	  import.
	  I imported from revision 8ab5996c4a14364411442d93babb343cc2ce0d89
	  of gnulib.

2010-05-30  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/gv_message.h: Document new options
	