@@ -22,6 +22,7 @@ MANUALEDITION=First
 AC_SUBST(VERSION)
 AC_SUBST(MANUALEDITION)
 
+AC_PROG_MKDIR_P
 
 dnl DEFUNS
 
